--- a/volleyball/templates/server/vedit_fixture.html
+++ b/volleyball/templates/server/vedit_fixture.html
@@ -33,6 +33,10 @@
       <span>{{form.date}}</span>
     </div>
     <div class="field flex">
+      <label>{{form.date.label}}</label>
+      <span>{{form.time}}</span>
+    </div>
+    <div class="field flex">
       <label>{{form.team1.label}}</label>
       <span>{{form.team1}}</span>
     </div>
@@ -58,7 +62,7 @@
     </div>
   </div>
 
-  <button type="submit" class='btn btn-outline-primary'>Save Changes</button>
+  <button type="submit" class="btn btn-outline-primary">Save Changes</button>
 </form>
 
 {%endblock%}
