--- a/netball/templates/server/ntournament.html
+++ b/netball/templates/server/ntournament.html
@@ -33,7 +33,7 @@
 
           {% endfor %}
         </div>
-        <button type="submit" class="btn btn-success">Save</button>
+        <button type="submit" class="btn btn-success" name="save_groups">Save Groups</button>
       </form>
     </div>
     <!-- competition_detail.html -->
@@ -68,11 +68,14 @@
   </div>
 
   <div class="kiokl">
-    <div class="fixture-custom">
-      <button class="btn-submit" onclick="Creater()">
-        create other fixture
-      </button>
-    </div>
+    <button
+      type="button"
+      class="btn btn-primary"
+      data-toggle="modal"
+      data-target="#exampleModal"
+    >
+      Create Fixture
+    </button>
     <div class="fixtures">
       {% regroup fixtures by group as group_list %}
       <h2></h2>
@@ -97,70 +100,222 @@
 
       {% endfor %} {% endfor %}
     </div>
-    {% comment %} next round {% endcomment %}
-    <div class="nextround flex">
-      <h1>Next Round Fixtures</h1>
-      <a href="{% url 'generate_next_round_fixtures'%}" class="btn-submit">
-        Generate Next Fixtures
-      </a>
+    {% comment %} next round next round {% endcomment %} {% comment %} next
+    round next round {% endcomment %}
+
+    <!-- New form added here -->
+    <div
+      class="modal fade"
+      id="exampleModal"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">NEW {{TOURNAMENT}} FIXTURE</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="col-md-12">
+              <form id="editFixtureForm" method="post" action="" class="needs-validation" novalidate> 
+                {% csrf_token %}
+
+                <div class="row">
+                  <div class="col-md">
+                    <div class="form-group">
+                      <label for="{{ fixture_form.stage.id_for_label }}" class="form-label"
+                        >{{fixture_form.stage.label}}</label
+                      >
+                      {{fixture_form.stage}}
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label for="{{ fixture_form.status.id_for_label }}" class="form-label"
+                        >{{fixture_form.status.label}}</label
+                      >
+                      {{fixture_form.status}}
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label for="{{ fixture_form.round.id_for_label }}" class="form-label"
+                        >{{fixture_form.round.label}}</label
+                      >
+                      {{fixture_form.round}}
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label for="{{ fixture_form.group.id_for_label }}" class="form-label"
+                        >{{fixture_form.group.label}}</label
+                      >
+                      {{fixture_form.group}}
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label for="{{ fixture_form.venue.id_for_label }}" class="form-label"
+                        >{{fixture_form.venue.label}}</label
+                      >
+                      {{fixture_form.venue}}
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label for="{{ fixture_form.date.id_for_label }}" class="form-label"
+                        >{{fixture_form.date.label}}</label
+                      >
+                      {{fixture_form.date}}
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label for="{{ fixture_form.time.id_for_label }}" class="form-label"
+                        >{{fixture_form.time.label}}</label
+                      >
+                      {{fixture_form.time}}
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label for="{{ fixture_form.team1.id_for_label }}" class="form-label"
+                        >{{fixture_form.team1.label}}</label
+                      >
+                      {{fixture_form.team1}}
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label for="{{ fixture_form.team2.id_for_label }}" class="form-label"
+                        >{{fixture_form.team2.label}}</label
+                      >
+                      {{fixture_form.team2}}
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label
+                        for="{{ fixture_form.team1_score.id_for_label }}"
+                        class="form-label"
+                        >{{fixture_form.team1_score.label}}</label
+                      >
+                      {{fixture_form.team1_score}}
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label
+                        for="{{ fixture_form.team2_score.id_for_label }}"
+                        class="form-label"
+                        >{{fixture_form.team2_score.label}}</label
+                      >
+                      {{fixture_form.team2_score}}
+                    </div>
+                  </div>
+                </div>
+
+                <div class="row mt-4">
+                  <div class="col-12 text-center">
+                    <button type="submit" class="btn btn-primary" name="save_fixture">Save Fixture</button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+
+          <div class="modal-footer">
+            <button type="button" class="btn btn-danger" data-dismiss="modal">
+              Cancel
+            </button>
+          </div>
+        </div>
+      </div>
+      </div>
+
+          <!-- End of new form -->
+          {% comment %} next round next round {% endcomment %}
+          <div class="nextround flex">
+            <h1>Next Round Fixtures</h1>
+            <a
+              href="{% url 'generate_next_round_fixtures'%}"
+              class="btn-submit"
+            >
+              Generate Next Fixtures
+            </a>
+          </div>
+
+          {% for round_number, fixtures in next_round_fixtures %}
+          <h2>Round {{ forloop.counter }}</h2>
+          <ul>
+            {% for fixture in fixtures %}
+            <li>{{ fixture.team1 }} vs {{ fixture.team2 }}</li>
+            {% endfor %}
+          </ul>
+          {% endfor %}
+      
+      </div>
+   
     </div>
-
-    {% for round_number, fixtures in next_round_fixtures %}
-    <h2>Round {{ forloop.counter }}</h2>
-    <ul>
-      {% for fixture in fixtures %}
-      <li>{{ fixture.team1 }} vs {{ fixture.team2 }}</li>
-      {% endfor %}
-    </ul>
-    {% endfor %}
   </div>
+  
   <link
-    href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css"
-    rel="stylesheet"
-  />
-  <!-- Include jQuery -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <!-- Include Select2 JS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
+  href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css"
+  rel="stylesheet"
+/>
+<!-- Include jQuery -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<!-- Include Select2 JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
 
-  <script>
-    $(document).ready(function () {
-      $("#id_teams").select2();
+<script>
+  $(document).ready(function () {
+    $("#id_teams").select2();
+  });
+</script>
+<script>
+  document
+    .getElementById("generateFixturesButton")
+    .addEventListener("click", function () {
+      var form = document.getElementById("generateFixturesForm");
+      var formData = new FormData(form);
+
+      var xhr = new XMLHttpRequest();
+      xhr.open("POST", form.action, true);
+      xhr.setRequestHeader("X-Requested-With", "XMLHttpRequest");
+      xhr.onload = function () {
+        var response = JSON.parse(xhr.responseText);
+        if (response.success) {
+          alert("Football Fixtures generated successfully");
+          // Add additional logic to update the UI if needed
+        } else {
+          alert("Error: " + response.message);
+        }
+      };
+      xhr.send(formData);
     });
-  </script>
-  <script>
-    document
-      .getElementById("generateFixturesButton")
-      .addEventListener("click", function () {
-        var form = document.getElementById("generateFixturesForm");
-        var formData = new FormData(form);
 
-        var xhr = new XMLHttpRequest();
-        xhr.open("POST", form.action, true);
-        xhr.setRequestHeader("X-Requested-With", "XMLHttpRequest");
-        xhr.onload = function () {
-          var response = JSON.parse(xhr.responseText);
-          if (response.success) {
-            alert("Football Fixtures generated successfully");
-            // Add additional logic to update the UI if needed
-          } else {
-            alert("Error: " + response.message);
-          }
-        };
-        xhr.send(formData);
-      });
+  const fixtureCreate = document.querySelector(".new-fixture");
 
-    const fixtureCreate = document.querySelector(".new-fixture");
-
-    const Creater = () => {
-      if (fixtureCreate.classList.contains("none")) {
-        fixtureCreate.classList.remove("none");
-        fixtureCreate.classList.add("flex");
-      } else {
-        fixtureCreate.classList.add("none");
-        fixtureCreate.classList.remove("flex");
-      }
-    };
-  </script>
-</div>
+  const Creater = () => {
+    if (fixtureCreate.classList.contains("none")) {
+      fixtureCreate.classList.remove("none");
+      fixtureCreate.classList.add("flex");
+    } else {
+      fixtureCreate.classList.add("none");
+      fixtureCreate.classList.remove("flex");
+    }
+  };
+</script></div>
 {% endblock %}
+
